--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <label for="name">Name:</label>
             <input type="text" id="name" required>
 
-            <label for="phone">Name:</label>
+            <label for="phone">Phone Number:</label>
             <input type="phone" id="phone" required>
 
             <label for="date">Date:</label>
